[project]
name = "bhuvanam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "cartopy>=0.24.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "scikit-image>=0.25.0",
    "scipy>=1.17.1",
]
